[gd_scene load_steps=25 format=4]

[ext_resource type="Script" path="res://engine/scripts/classes/level/level.gd" id="1"]
[ext_resource type="Script" path="res://stages/extra/minix/scripts/minix_score_loader.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://d3srfe2r6fg2u" path="res://engine/objects/core/music_loader/music_loader.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://1do11cr84k7y" path="res://engine/objects/players/player.tscn" id="4"]
[ext_resource type="Script" path="res://stages/extra/minix/scripts/minix_mario.gd" id="5"]
[ext_resource type="AudioStream" uid="uid://bwendq840wjrf" path="res://music/climbing_minigame/mario_uwaah.wav" id="6"]
[ext_resource type="PackedScene" uid="uid://ugxjxrdao5el" path="res://engine/components/hud/hud.tscn" id="7"]
[ext_resource type="Script" path="res://stages/extra/climbing_minigame/scripts/climbing_node_starter.gd" id="8"]
[ext_resource type="Script" path="res://engine/components/ui/generic/menu_items_controller.gd" id="9"]
[ext_resource type="AudioStream" uid="uid://kj3hs5hf5nsf" path="res://stages/extra/minix/sfx/select_extra.wav" id="10"]
[ext_resource type="FontFile" uid="uid://bgsavu6joui2r" path="res://engine/fonts/junebug.ttf" id="11"]
[ext_resource type="Script" path="res://stages/extra/minix/scripts/minix_start_sel.gd" id="12"]
[ext_resource type="Script" path="res://stages/extra/minix/scripts/minix_map_sel.gd" id="13"]
[ext_resource type="Script" path="res://stages/extra/minix/scripts/minix_igmusic_sel.gd" id="14"]
[ext_resource type="Script" path="res://stages/extra/minix/scripts/minix_end_sel.gd" id="15"]
[ext_resource type="Script" path="res://engine/scripts/nodes/effects/blinking_canvas_item.gd" id="16"]
[ext_resource type="Script" path="res://engine/components/ui/generic/menu_selector.gd" id="17"]
[ext_resource type="Script" path="res://stages/extra/minix/scripts/minix_selectors_anim.gd" id="18"]
[ext_resource type="Script" path="res://stages/extra/minix/scripts/high_score.gd" id="19"]
[ext_resource type="Script" path="res://stages/extra/minix/scripts/minix_gameover.gd" id="20"]
[ext_resource type="Script" path="res://stages/extra/minix/scripts/minix_gover_start_again.gd" id="21"]
[ext_resource type="Script" path="res://stages/extra/minix/scripts/minix_gover_switch_map.gd" id="22"]
[ext_resource type="PackedScene" uid="uid://b6gp0nhs08kf1" path="res://stages/extra/climbing_minigame/maps/dark_dungeon.tscn" id="23"]

[sub_resource type="FontVariation" id="FontVariation_3ksly"]
base_font = ExtResource("11")
spacing_glyph = 1

[node name="Climbing" type="Node2D"]
script = ExtResource("1")

[node name="MinixScoreLoader" type="Node" parent="."]
script = ExtResource("2")

[node name="MusicLoaderIntro" parent="." instance=ExtResource("3")]

[node name="Mario" parent="." instance=ExtResource("4")]
position = Vector2(336, 400)
script = ExtResource("5")
death_music_override = ExtResource("6")
death_wait_time = 10.0
death_stop_music = false

[node name="HUD" parent="." instance=ExtResource("7")]

[node name="MarioScore" parent="HUD/Control" index="1"]
visible = false

[node name="Coins" parent="HUD/Control/Control" index="1"]
value_name = "score"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Objects" type="Node2D" parent="."]

[node name="START" type="CanvasLayer" parent="."]
layer = 2

[node name="Node2D" type="Node2D" parent="START"]
script = ExtResource("8")

[node name="ColorRect" type="ColorRect" parent="START/Node2D"]
offset_right = 640.0
offset_bottom = 480.0
color = Color(1, 1, 1, 0.313726007938385)
metadata/_edit_lock_ = true

[node name="ColorRect2" type="ColorRect" parent="START/Node2D"]
offset_top = 24.0
offset_right = 640.0
offset_bottom = 277.0
color = Color(1, 1, 1, 0.3764710128307343)
metadata/_edit_lock_ = true

[node name="MinixControls" type="VBoxContainer" parent="START/Node2D"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 284.0
offset_right = 640.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 7
script = ExtResource("9")
control_sound = ExtResource("10")

[node name="Start" type="Label" parent="START/Node2D/MinixControls"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 12
text = "START THE FIGHT!"
horizontal_alignment = 1
script = ExtResource("12")

[node name="Start2" type="CenterContainer" parent="START/Node2D/MinixControls"]
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("13")

[node name="Label" type="Label" parent="START/Node2D/MinixControls/Start2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 12
text = "map: %s"
horizontal_alignment = 1
uppercase = true

[node name="Start4" type="CenterContainer" parent="START/Node2D/MinixControls"]
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("14")

[node name="Label" type="Label" parent="START/Node2D/MinixControls/Start4"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 12
text = "in-game music: %s"
horizontal_alignment = 1
uppercase = true

[node name="Start3" type="Label" parent="START/Node2D/MinixControls"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 12
text = "back to mario forever"
horizontal_alignment = 1
uppercase = true
script = ExtResource("15")

[node name="EnterToPreview" type="Label" parent="START/Node2D"]
offset_top = 453.0
offset_right = 640.0
offset_bottom = 467.0
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 12
text = "Press enter to preview"
horizontal_alignment = 1
uppercase = true
script = ExtResource("16")

[node name="Selector" type="AnimatedSprite2D" parent="START/Node2D"]
position = Vector2(243, 292)
script = ExtResource("17")
smooth_speed = 0.4
position_paddings_array = [0.0, 0.0, 0.0]

[node name="Start" type="Label" parent="START/Node2D/Selector"]
offset_left = -31.0
offset_top = -7.0
offset_right = -9.0
offset_bottom = 7.0
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 11
text = "-->"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("18")

[node name="Selector2" type="AnimatedSprite2D" parent="START/Node2D"]
position = Vector2(395, 292)
script = ExtResource("17")
smooth_speed = 0.4
position_side = 1
position_paddings_array = [0.0, 0.0, 0.0]

[node name="Start" type="Label" parent="START/Node2D/Selector2"]
offset_left = 9.0
offset_top = -7.0
offset_right = 31.0
offset_bottom = 7.0
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 11
text = "<--"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("18")
left_side = false

[node name="VBoxContainer" type="VBoxContainer" parent="START/Node2D"]
offset_left = 16.0
offset_top = 416.0
offset_right = 192.0
offset_bottom = 480.0
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="START/Node2D/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Start" type="Label" parent="START/Node2D/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 11
text = "LAST SCORE:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="START/Node2D/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("FontVariation_3ksly")
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("19")
minix_score_loader_path = NodePath("../../../../../MinixScoreLoader")
starter_path = NodePath("../../..")
value = "last"

[node name="HBoxContainer2" type="HBoxContainer" parent="START/Node2D/VBoxContainer"]
layout_mode = 2

[node name="Start" type="Label" parent="START/Node2D/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 11
text = "BEST SCORE:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="START/Node2D/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("FontVariation_3ksly")
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("19")
minix_score_loader_path = NodePath("../../../../../MinixScoreLoader")
starter_path = NodePath("../../..")
value = "best"

[node name="GAMEOVER" type="Node2D" parent="START"]
process_mode = 3
script = ExtResource("20")

[node name="ColorRect" type="ColorRect" parent="START/GAMEOVER"]
offset_right = 640.0
offset_bottom = 480.0
color = Color(1, 1, 1, 0.313726007938385)
metadata/_edit_lock_ = true

[node name="congratulations" type="Label" parent="START/GAMEOVER"]
offset_left = 160.0
offset_top = 112.0
offset_right = 480.0
offset_bottom = 125.0
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 12
text = "congratulations! your score is:



on map:


"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="score" type="Label" parent="START/GAMEOVER"]
offset_left = 160.0
offset_top = 133.0
offset_right = 480.0
offset_bottom = 147.0
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("FontVariation_3ksly")
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MapLabel" type="Label" parent="START/GAMEOVER"]
offset_top = 201.0
offset_right = 640.0
offset_bottom = 215.0
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 12
text = "%s"
horizontal_alignment = 1
uppercase = true

[node name="MinixControls" type="VBoxContainer" parent="START/GAMEOVER"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 284.0
offset_right = 640.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 7
script = ExtResource("9")
focused = false
control_sound = ExtResource("10")

[node name="PlayAgain" type="Label" parent="START/GAMEOVER/MinixControls"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 12
text = "PLAY AGAIN!"
horizontal_alignment = 1
script = ExtResource("21")

[node name="SwitchMap" type="Label" parent="START/GAMEOVER/MinixControls"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 12
text = "switch the map"
horizontal_alignment = 1
uppercase = true
script = ExtResource("22")

[node name="QuitToMF" type="Label" parent="START/GAMEOVER/MinixControls"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 12
text = "quit to mario forever"
horizontal_alignment = 1
uppercase = true
script = ExtResource("15")

[node name="Selector" type="AnimatedSprite2D" parent="START/GAMEOVER"]
script = ExtResource("17")
smooth_speed = 0.4
position_paddings_array = [0.0, 0.0, 0.0]

[node name="Start" type="Label" parent="START/GAMEOVER/Selector"]
offset_left = -31.0
offset_top = -7.0
offset_right = -9.0
offset_bottom = 7.0
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 11
text = "-->"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("18")

[node name="Selector2" type="AnimatedSprite2D" parent="START/GAMEOVER"]
script = ExtResource("17")
smooth_speed = 0.4
position_side = 1
position_paddings_array = [0.0, 0.0, 0.0]

[node name="Start" type="Label" parent="START/GAMEOVER/Selector2"]
offset_left = 9.0
offset_top = -7.0
offset_right = 31.0
offset_bottom = 7.0
theme_override_colors/font_outline_color = Color(0.1254899948835373, 0.1254899948835373, 0.5019609928131104, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11")
theme_override_font_sizes/font_size = 11
text = "<--"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("18")
left_side = false

[node name="Maps" type="Node2D" parent="."]

[node name="dark dungeon" parent="Maps" instance=ExtResource("23")]

[connection signal="selected" from="START/Node2D/MinixControls" to="START/Node2D/Selector" method="handle_selection"]
[connection signal="selected" from="START/Node2D/MinixControls" to="START/Node2D/Selector2" method="handle_selection"]
[connection signal="map_changed_to" from="START/Node2D/MinixControls/Start2" to="START/Node2D" method="_on_map_changed_to"]
[connection signal="map_changed_to" from="START/Node2D/MinixControls/Start2" to="START/Node2D/VBoxContainer/HBoxContainer/score" method="_on_map_changed_to"]
[connection signal="map_changed_to" from="START/Node2D/MinixControls/Start2" to="START/Node2D/VBoxContainer/HBoxContainer2/score" method="_on_map_changed_to"]
[connection signal="map_changed_to" from="START/Node2D/MinixControls/Start4" to="START/Node2D" method="_on_map_changed_to"]
[connection signal="map_changed_to" from="START/Node2D/MinixControls/Start4" to="START/Node2D/VBoxContainer/HBoxContainer/score" method="_on_map_changed_to"]
[connection signal="map_changed_to" from="START/Node2D/MinixControls/Start4" to="START/Node2D/VBoxContainer/HBoxContainer2/score" method="_on_map_changed_to"]
[connection signal="selected" from="START/GAMEOVER/MinixControls" to="START/GAMEOVER/Selector" method="handle_selection"]
[connection signal="selected" from="START/GAMEOVER/MinixControls" to="START/GAMEOVER/Selector2" method="handle_selection"]

[editable path="HUD"]
